Smooth scrolling implemented on ES mob & desk versions. Firefox layout issues pending.

--- a/app/scss/views/_section5.scss
+++ b/app/scss/views/_section5.scss
@@ -44,6 +44,15 @@
 			height: getvw(645vw);
 		}
 	}
+
+	// Spanish styling
+	&.es{
+		section#section5{
+			.img-wrapper{
+				margin-top: -3.05vw;
+			}
+		}
+	}
 }
 // ====================== Desktop =====================
 
